--- a/lang/en.json
+++ b/lang/en.json
@@ -358,6 +358,16 @@
 "DND5E.ComponentSomaticAbbr": "S",
 "DND5E.ComponentVerbal": "Verbal",
 "DND5E.ComponentVerbalAbbr": "V",
+"DND5e.MAXPAT": "MAXPAT",
+"DND5E.ClassesArtificer": "Artificer",
+"DND5E.ClassesBard": "Bard",
+"DND5E.ClassesCleric": "Cleric",
+"DND5E.ClassesDruid": "Druid",
+"DND5E.ClassesPaladin": "Paladin",
+"DND5E.ClassesRanger": "Ranger",
+"DND5E.ClassesSorcerer": "Sorcerer",
+"DND5E.ClassesWarlock": "Warlock",
+"DND5E.ClassesWizard": "Wizard",
 "DND5E.Contents": "Contents",
 "DND5E.ContextMenuActionEdit": "Edit",
 "DND5E.ContextMenuActionDuplicate": "Duplicate",
@@ -1011,6 +1021,7 @@
 "DND5E.SpellCastingHeader": "Spell Casting",
 "DND5E.Spellcasting": "Spellcasting",
 "DND5E.SpellComponents": "Spell Components",
+"DND5E.SpellClassList": "Class List - MAXPAT",
 "DND5E.SpellCreate": "Create Spell",
 "DND5E.SpellDC": "Spell DC",
 "DND5E.SpellDetails": "Spell Details",
